--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,6 @@
             <artifactId>spark-sql_2.12</artifactId>
             <version>2.4.8</version>
             <!--  provided 表示我们的项目将来运行时，环境中会提供spark依赖-->
-            <!--<scope>provided</scope>-->
         </dependency>
 
 
@@ -91,6 +90,18 @@
 
     <build>
         <plugins>
+
+            <!-- 指定编译java的插件 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+
             <!-- 指定编译scala的插件 -->
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
@@ -108,6 +119,34 @@
                                 <arg>${project.build.directory}/.scala_dependencies</arg>
                             </args>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+
+            <!--  把依赖jar中的用到的类，提取到自己的jar中 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass></mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <!--下面是为了使用 mvn package命令，如果不加则使用mvn assembly-->
+                <executions>
+                    <execution>
+                        <id>make-assemble</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
                     </execution>
                 </executions>
             </plugin>
