综合练习题

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
                     <groupId>org.apache.hadoop</groupId>
                     <artifactId>hadoop-common</artifactId>
                 </exclusion>
+
+                <exclusion>
+                    <groupId>org.apache.hadoop</groupId>
+                    <artifactId>hadoop-hdfs</artifactId>
+                </exclusion>
+
             </exclusions>
         </dependency>
 
