--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <version>1.3.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
