消费者偏移量

--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,21 @@
 
 
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.6.0</version>
+        </dependency>
+
+        <!-- 小辣椒  ，idea中需要安装lombok 插件  -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.18</version>
+        </dependency>
+
+
+
     </dependencies>
 
 
