--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
 
     <!-- 依赖 -->
     <dependencies>
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+
 
         <!-- scala 语言库 -->
         <dependency>
@@ -23,7 +29,6 @@
             <artifactId>scala-library</artifactId>
             <version>2.12.12</version>
         </dependency>
-
 
         <!-- spark sql 依赖 -->
         <dependency>
